refactor!: the journal is a listener — the transcript store family retires
Deletes TranscriptStore, TranscriptEntry, InMemoryTranscriptStore, and the
.transcript(...) knob on both builders (design §17): a journal is now
nothing more than a .listen(MessageAppended.class, ...) declaration, sync
for audit-grade veto-by-throw strictness or listenAsync for best-effort.
MessageCodec survives in spi.conversation for store modules.

Engine-level and E2E journaling tests re-home onto recording listeners; the
E2E journal proof (the_journal_keeps_what_compaction_removes) keeps every
assertion (birth order, usage attribution, the compaction summary at
Usage.zero(), nothing re-journaled). A new E2E strictness proof pins that a
throwing sync MessageAppended listener fails the run while the
conversation's snapshot still saves via the ConversationStore.

README's journal section and CHANGELOG's Unreleased entries collapse onto
the listener-only shape; AgentFacadeTest's
a_journal_is_simply_a_declared_listener mirrors README's one-liner verbatim.